--- a/server/package.json
+++ b/server/package.json
@@ -14,13 +14,18 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.5.1",
+    "compression": "^1.7.5",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-async-handler": "^1.2.0",
+    "express-rate-limit": "^7.4.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.1",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.7"
+    "node-cache": "^5.1.2",
+    "nodemon": "^3.1.7",
+    "winston": "^3.17.0"
   }
 }
